# parallel-QR-Factorization

./: .gitignore  README.md
Gram-Schmidt/normal/: CMakeLists.txt  GramSchmidtSerial.cpp
Gram-Schmidt/parallel/: CMakeLists.txt  GramSchmidtParallel.cpp
Householder/eigen/: CMakeLists.txt
Householder/eigen/src/: generate_matrix.cpp  normal_householder.cpp  parallel_householder.cpp
Householder/normal/: CMakeLists.txt  HouseholderSerial.cpp
Householder/parallel/: CMakeLists.txt  HouseholderParallel.cpp
result/: .gitignore  results.xlsx
result/GramSchmidtParallel/1000dim/: report.txt
result/GramSchmidtParallel/100dim/: report.txt
result/GramSchmidtParallel/1200dim/: report.txt
result/GramSchmidtParallel/1500dim/: report.txt
result/GramSchmidtParallel/1700dim/: report.txt
result/GramSchmidtParallel/2000dim/: report.txt
result/GramSchmidtParallel/2200dim/: report.txt
result/GramSchmidtParallel/2500dim/: report.txt
result/GramSchmidtParallel/2700dim/: report.txt
result/GramSchmidtParallel/3000dim/: report.txt
result/GramSchmidtParallel/4000dim/: report.txt
result/GramSchmidtParallel/500dim/: report.txt
result/GramSchmidtParallel/50dim/: report.txt
result/GramSchmidtParallel/5dim/: report.txt
result/GramSchmidtParallel/800dim/: report.txt
result/GramSchmidtSerial/1000dim/: report.txt
result/GramSchmidtSerial/100dim/: report.txt
result/GramSchmidtSerial/1200dim/: report.txt
result/GramSchmidtSerial/1500dim/: report.txt
result/GramSchmidtSerial/1700dim/: report.txt
result/GramSchmidtSerial/2000dim/: report.txt
result/GramSchmidtSerial/2200dim/: report.txt
result/GramSchmidtSerial/2500dim/: report.txt
result/GramSchmidtSerial/2700dim/: report.txt
src/: generate_matrix.cpp  normal_householder.cpp  parallel_householder.cpp
(+23 files in other folders)
